# ai-lib

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
minmax/: minmax.py  minmax_ut.py
