[project]
name = "saro476-ai-lib"
version = "0.1.1"
description = "A simple AI library"
authors = [
    {name = "Austin Aloway", email = "aaloway@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3"
license = {file = "LICENSE.md"}
readme = "README.md"